# Homework2

./: README.md
aruco_ros/install/: local_setup.sh  setup.sh
aruco_ros/install/aruco/share/aruco/: local_setup.sh  package.sh
aruco_ros/install/aruco_msgs/share/aruco_msgs/: local_setup.sh  package.sh
aruco_ros/install/aruco_ros/lib/aruco_ros/: double  marker_publisher
aruco_ros/install/aruco_ros/share/aruco_ros/: local_setup.sh  package.sh
aruco_ros/log/: latest_build
ros2_iiwa/iiwa_bringup/launch/: iiwa.launch.py
ros2_iiwa/iiwa_description/gazebo/models/arucotag/: model.config  model.sdf
ros2_iiwa/iiwa_description/gazebo/models/arucotag/materials/scripts/: arucotag.material
ros2_iiwa/iiwa_description/gazebo/worlds/: aruco_world.world  empty.world  gazebo_log.txt
ros2_iiwa/iiwa_description/urdf/: iiwa.urdf.xacro
ros2_kdl_package/: CMakeLists.txt  package.xml
ros2_kdl_package/action/: Ros2KdlTraj.action
ros2_kdl_package/bags/bag_velocity/: bag_velocity_0.db3  metadata.yaml
ros2_kdl_package/bags/bag_velocity_null/: bag_velocity_null_0.db3  metadata.yaml
ros2_kdl_package/config/: camera.xacro  iiwa_parameters.yaml
ros2_kdl_package/include/: kdl_control.h  kdl_planner.h
ros2_kdl_package/launch/: iiwa_kdl.launch.py
ros2_kdl_package/src/: action_client.cpp  kdl_control.cpp  kdl_planner.cpp  ros2_kdl_node.cpp  ros2_kdl_node_example.cpp
ros2_kdl_package/srv/: marker_pose_service.cpp
